<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_header"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/current_temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/current_temperature_colon"
        android:textSize="14sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/city"
        app:layout_constraintStart_toStartOf="@id/city"/>

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/current_temp_title"
        app:layout_constraintStart_toStartOf="@id/current_temp_title"
        android:contentDescription="@string/weather_icon_image" />

    <TextView
        android:id="@+id/current_temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/weather_icon"
        app:layout_constraintTop_toBottomOf="@id/current_temp_title"/>

    <TextView
        android:id="@+id/precipitation_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@id/current_temp_title"
        app:layout_constraintTop_toBottomOf="@id/weather_icon"/>

    <TextView
        android:id="@+id/high_temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/high_temperature_colon"
        app:layout_constraintTop_toBottomOf="@id/precipitation_value"
        app:layout_constraintStart_toStartOf="@id/weather_icon"/>

    <TextView
        android:id="@+id/high_temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/high_temp_title"
        app:layout_constraintTop_toBottomOf="@id/high_temp_title"/>

    <TextView
        android:id="@+id/low_temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/low_temperature_colon"
        app:layout_constraintTop_toBottomOf="@id/high_temp_value"
        app:layout_constraintStart_toStartOf="@id/high_temp_title"/>

    <TextView
        android:id="@+id/low_temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/low_temp_title"
        app:layout_constraintTop_toBottomOf="@id/low_temp_title"/>

    <TextView
        android:id="@+id/wind_speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/wind_speed_colon"
        app:layout_constraintTop_toBottomOf="@id/low_temp_value"
        app:layout_constraintStart_toStartOf="@id/low_temp_title"/>

    <TextView
        android:id="@+id/wind_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/wind_speed_title"
        app:layout_constraintTop_toBottomOf="@id/wind_speed_title"/>

    <TextView
        android:id="@+id/precipitation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/precipitation_colon"
        app:layout_constraintTop_toBottomOf="@id/wind_speed_value"
        app:layout_constraintStart_toStartOf="@id/wind_speed_title"/>

    <TextView
        android:id="@+id/cloud_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/precipitation_title"
        app:layout_constraintStart_toStartOf="@id/precipitation_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>